welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: ')' expected but '}' found.
	if (lit message = "R") {droite() ; avance() }}} 
                                                      ^